adding composer file

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,11 @@
   "description": "Common library for Spartan",
   "type": "library",
   "require": {
-    "php": "^8.1"
+    "guzzlehttp/guzzle": "^7.0",
+    "illuminate/support": "^8.83|^v9.11",
+    "vonage/client": "4.*|3.*",
+    "twilio/sdk": "^6.37",
+    "predis/predis": "^2.1",
+    "phpmailer/phpmailer": "*"
   }
 }
